@@ -1,6 +1,8 @@
 cdebconf-entropy (0.7) UNRELEASED; urgency=low
 
   * Rename newt entropy plugin from "entropy-text" to "entropy".
+  * Make newt entropy plugin able to use a different FIFO through the "FIFO"
+    variable.
 
  -- Jérémy Bobbio <lunar@debian.org>  Sun, 23 Mar 2008 20:28:57 +0100
 
